Fixed Styling Issues on mobile

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     text-align: center;
 }
 .page{
-    height: 100%;
+
     display: flex;
     flex-direction: column;
     background-color: #171614;
@@ -46,13 +46,16 @@ body{
     max-width: 700px;
 }
 .humanChoice li, .computerChoice li{
+    list-style-type: none;
+    min-width: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 8px solid #F0EDEE;
     border-radius: 12px;
     aspect-ratio: 1/1;
-    width: 25%;
+    min-width: 120px;
+    margin-bottom: 16px;
 }
 .humanChoice li:hover{
     border:8px solid #1C7C54;
@@ -85,6 +88,7 @@ body{
     font-size: 32px;
 }
 .footer{
+    max-width: none;
     background-color: #2F6690;
     font-family: system-ui;
     text-align: center;
